# python-template

./: .gitignore  README.md  ext_build.py  pyproject.toml
csrcs/: CMakeLists.txt  greeter.cc  greeter.h  pybind.cc
tests/_ext/: test_ext.py
