[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Python template project with tests and C extensions."
authors = ["LinHeLurking"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pybind11 = "^2.13.5"
ninja = "^1.11.1.1"
cmake = "^3.30.2"
pytest = "^8.3.2"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
